fix cart modal overflow

--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -2,7 +2,9 @@
 
 .cart {
     height: 100vh;
+    max-height: 100vh;
     width: 70vw;
+    overflow-y: scroll;
     position: absolute;
     z-index: 3;
     padding: 15px 15px 0 15px;
